crates/embedded-bitmap-font-macros/tests/ui/bitmap_font_type_alias_removed_fail.rs
use embedded_bitmap_font::BitmapFont;

fn main() {
    let _font: Option<BitmapFont<'static>> = None;
}
